# nl_robot_console

./: CMakeLists.txt  README.md  console.py  grammar.fcfg  grammar.py  nltk_grammar.py  package.xml  setup.py
src/nl_robot_console/: cfgparser.py  console.py  grammar.fcfg
src/nl_robot_console/test/: test_cfgparser.py
