<?xml version="1.0"?>
<package>
  <name>nl_robot_console</name>
  <version>0.0.0</version>
  <description>Natural Language Robot Console</description>

  <maintainer email="S.v.d.Dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>TODO</license>

  <build_depend>action_server</build_depend>
  <run_depend>action_server</run_depend>

  <build_depend>ed</build_depend>
  <run_depend>ed</run_depend>

</package>
