<?xml version="1.0"?>
<package format="2">
  <name>nl_robot_console</name>
  <version>0.0.1</version>
  <description>Natural Language Robot Console</description>

  <maintainer email="S.v.d.Dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>action_server</depend>
  <depend>ed_msgs</depend>
  <depend>grammar_parser</depend>
  <depend>robocup_knowledge</depend>

</package>
